--- a/css/styles.css
+++ b/css/styles.css
@@ -819,7 +819,7 @@ body.menu-open {
     .main-nav {
         padding: 4px 0; /* Padding ainda mais reduzido para mobile */
         justify-content: flex-end;
-        min-height: 40px; /* Altura mínima ainda mais reduzida para mobile */
+        min-height: 70px; /* Altura aumentada para mobile */
         background-color: #fff; /* Fundo branco também no mobile */
     }
     
@@ -850,11 +850,12 @@ body.menu-open {
         height: 100vh;
         top: 0;
         left: 0;
-        align-items: center;
+        align-items: flex-start; /* Alinha à esquerda */
         justify-content: center;
         gap: 30px;
         z-index: 90;
         animation: fadeIn 0.3s ease-in-out;
+        padding-left: 32px; /* Espaço da esquerda */
     }
     
     .main-nav a {
